--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,8 @@ header {
 }
 
 #searchInput {
-    width: 200%;
+    width: 100%;
+    max-width: 800px;
     padding: 8px;
     border-radius: 20px;
     border: 1px solid #fff;
@@ -44,6 +45,7 @@ header {
     background-color: #fff0c6;
     
 }
+
 
 .auth-buttons {
     display: flex;
@@ -726,6 +728,7 @@ main {
     margin-top: 0;
     margin-bottom: 2rem;
     justify-content: space-between;
+    padding-right: 40px;
 }
 
 .s-posts-container{
@@ -925,19 +928,18 @@ main {
 }
 
 .subject-badge-link {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
-  
+
 .subject-badge {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 150px;
-      text-align: center;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 150px;
+    text-align: center;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
-  
 
 .subject-badge:hover {
     transform: translateY(-5px);
